ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libmk4.la
# Sources for libmk4
libmk4_la_SOURCES = column.cpp   \
				    derived.cpp  \
				    fileio.cpp   \
				    handler.cpp  \
				    remap.cpp    \
				    store.cpp    \
				    table.cpp    \
				    view.cpp
# Linker options
libmk4_la_LDFLAGS = 
# Compiler options. Here we are adding the include directory
# to be searched for headers included in the source code.
libmk4_la_CPPFLAGS = -I../include

